<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Postbox</string>
    <string name="title_message_list">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_searchable_activity2">App</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="change_picture">Change Picture</string>
    <string name="change_password">Change Password</string>
    <string name="cancel_button">Cancel</string>
    <string name="update_button">Update</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm new password</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_group_delete">Delete</string>
    <string name="received_post">You got a new post.</string>
    <string name="no_new_post">No new post yet.</string>
    <string name="title_map">Map</string>
    <string name="title_activity_maps">Map</string>

</resources>
