<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.ericsson.postbox.userinterface.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:weightSum="1">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="200dp"
                android:layout_height="118dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dip"
                android:layout_marginRight="6dip"
                android:layout_gravity="center"
                android:contentDescription="TODO"
                android:src="@drawable/user"
                android:layout_weight="0.31"/>

            <TextView
                android:id="@+id/change_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.04"
                android:text="@string/change_picture"
                android:textColor="#0b84aa"
                android:textSize="18sp"
                android:layout_marginLeft="5sp"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/name_label"
                android:gravity="left"
                android:layout_marginLeft="20sp"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_marginTop="6sp"
                android:layout_marginLeft="2sp"
                android:gravity="left"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:id="@+id/email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/email_label"
                android:gravity="left"
                android:layout_marginLeft="20sp"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_marginTop="3sp"
                android:layout_marginLeft="2sp"
                android:gravity="left"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip">

            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/password_label"
                android:gravity="left"
                android:layout_marginLeft="20sp"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change_password"
                android:layout_marginTop="8sp"
                android:layout_marginLeft="2sp"
                android:gravity="left"
                android:textColor="#0b84aa"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip">

                <Button
                    android:id="@+id/cancel_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/cancel_button"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/update_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/update_button"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ViewAnimator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewAnimator"
        android:layout_gravity="right|center_vertical"/>
</FrameLayout>
